Fixed up my resume

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <title>Brandon Skrtich - Resumé</title>
 
+        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
         <link href='http://fonts.googleapis.com/css?family=Jura:400,500,600' rel='stylesheet' type='text/css'>
         <style>
             body {
@@ -175,6 +176,21 @@
                 padding-bottom: 4px;
             }
 
+            .font1 {
+                font-size: small;
+                font-weight: normal;
+            }
+
+            .font2 {
+                font-size: large;
+                font-weight: normal;
+            }
+
+            .font3 {
+                font-size: x-large;
+                font-weight: 600;
+            }
+
         </style>
     </head>
     <body>
@@ -196,17 +212,37 @@
                 <div class="section_description">
                     <div class="job">
                         <div class="left">
+                            <div class="job_company">Distributor Wire & Cable</div>
+                            <div class="job_title">Senior Software Developer</div>
+                        </div>
+                        <div class="right">
+                            <div class="title">Nov, 2014 - Current</div>
+                            <div class="desc">Broomfield, CO</div>
+                        </div>
+                        <div class="clear">
+                            Transitioned from legacy order management system to a modern
+                            system using LAMP stack, Backbone.js and AWS. This allow us to
+                            use analytics from order to improve the business.
+                        </div>
+                    </div>
+                    <div class="job">
+                        <div class="left">
                             <div class="job_company">Return Path</div>
                             <div class="job_title">Software Engineer</div>
                         </div>
                         <div class="right">
-                            <div class="title">Sept, 2013 - Current</div>
+                            <div class="title">Sept, 2013 - Nov, 2014</div>
                             <div class="desc">Broomfield, CO</div>
                         </div>
                         <div class="clear">
-                            Developed and maintained frontend systems using Backbone.Js and Angular.Js for the front end and PHP, Oracle, and CentOS on the back.
-    Worked in a large team developing, enhancing and maintaining core products that were used by Fortune 500 companies.
-    Used the Agile/Kanban/Scrum process throughout the development process in order to keep production high and allow for quick turn around.
+                            Developed and maintained frontend systems used by fortune 500
+                            companies using Backbone.Js and Angular.Js for the front end
+                            and PHP, Oracle, and CentOS on the back.
+                            <!--
+                            Used the Agile/Kanban/Scrum process throughout the development
+                            process in order to keep production high and allow for quick
+                            turn around.
+                            -->
                         </div>
                     </div>
                     <div class="job">
@@ -219,9 +255,12 @@
                             <div class="desc">Denver, CO</div>
                         </div>
                         <div class="clear">
-                            Blah Blah Blah
+                            Being a team lead of 3 developers, we designed, programmed
+                            and maintained a order management system/workflow system
+                            using Linux, Apache, MySQL and PHP.
                         </div>
                     </div>
+                    <!--
                     <div class="job">
                         <div class="left">
                             <div class="job_company">Retriever Software</div>
@@ -232,17 +271,43 @@
                             <div class="desc">Englewood, CO</div>
                         </div>
                         <div class="clear">
-                            Blah Blah Blah
+                            Solo Designed, Programmed, Maintained a web portal for
+                            customer interaction and management using a custom built
+                            frame work. Solo Designed, Programmed, Maintained a Client/Server
+                            system using Xojo, PHP, Apache, XML, PostgreSQL installed on 4000+
+                            systems.
                         </div>
                     </div>
+                    -->
                 </div>
             </div>
             <div id="section3" class="section">
                 <div class="section_title">Skills</div>
                 <div class="section_description">
-                    JavaScript Backbone.js angular.js PHP Silex Cakephp Yii Zend WordPress
-                    MySQL MVC LESS CSS HTML/CSS Apache Oracle MySQL PostgreSQL SQL
-                    jQuery Git OOP RegEx AJAX REST API Linux Agile Scrum Kanban
+                    <span class="font2">Backbone.js</span>
+                    <span class="font3">PHP</span>
+                    <span class="font2">Silex</span>
+                    <span class="font3">JavaScript</span>
+                    <span class="font1">Zend</span>
+                    <span class="font1">Kanban</span>
+                    <span class="font1">LESS</span>
+                    <span class="font3">CSS</span>
+                    <span class="font1">Apache</span>
+                    <span class="font3">Agile</span>
+                    <span class="font2">PostgreSQL</span>
+                    <span class="font1">SQL</span>
+                    <span class="font3">HTML</span>
+                    <span class="font2">jQuery</span>
+                    <span class="font1">Git</span>
+                    <span class="font1">Scrum</span>
+                    <span class="font3">MySQL</span>
+                    <span class="font2">angular.js</span>
+                    <span class="font1">LAMP Stack</span>
+                    <span class="font2">AJAX</span>
+                    <span class="font2">REST</span>
+                    <span class="font3">Oracle</span>
+                    <span class="font1">API</span>
+                    <span class="font2">Linux</span>
                 </div>
             </div>
             <div id="section4" class="section">
