--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                 min-height: 100px;
                 width: 100%;
                 display: inline-block;
+                padding-bottom: 50px;
             }
 
             .section_title {
