fix my phone number

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                     <div id="developer_title">WEB DEVELOPER</div>
                 </div>
                 <div id="section1b">
-                    720.362.0484<br><br>
+                    720.362.0848<br><br>
                     bskrtich@gmail.com<br><br>
                     11530 Benton Ct<br>
                     Broomfield, Co 80020
@@ -258,7 +258,7 @@
                         </div>
                         <div class="clear">
                             Being a team lead of 3 developers, we designed, programmed
-                            and maintained a order management system/workflow system
+                            and maintained an order management system/workflow system
                             using Linux, Apache, MySQL and PHP.
                         </div>
                     </div>
