Update some description and spacing

--- a/index.html
+++ b/index.html
@@ -124,31 +124,17 @@
             .section_description {
                 float: right;
                 padding: 10px;
+                text-align: justify;
                 width: calc(100% - 210px);
                 border-top: 2px solid black;
+                word-spacing: 2px;
             }
 
             .job {
                 width: 100%;
                 min-height: 100px;
                 display: inline-block;
-                padding-bottom: 10px;
-            }
-
-            .description_info {
-                width: 50%;
-                float: left;
-                text-align: right;
-            }
-
-            .description_text {
-
-            }
-
-            .description_date {
-                width: 50%;
-                float: right;
-                text-align: right;
+                padding-bottom: 15px;
             }
 
             .job_company {
@@ -175,10 +161,15 @@
                 padding-bottom: 4px;
             }
 
-            .desc {
+            .loc {
                 white-space: nowrap;
                 font-size: 16px;
                 padding-bottom: 4px;
+            }
+
+            .desc {
+                padding-left: 2px;
+                padding-right: 2px;
             }
 
             .font1 {
@@ -206,8 +197,10 @@
                     <div id="developer_title">WEB DEVELOPER</div>
                 </div>
                 <div id="section1b">
-                    720.362.0848<br><br>
-                    bskrtich@gmail.com<br><br>
+                    720.362.0848<br>
+                    <br>
+                    bskrtich@gmail.com<br>
+                    <br>
                     11530 Benton Ct<br>
                     Broomfield, Co 80020
                 </div>
@@ -222,12 +215,13 @@
                         </div>
                         <div class="right">
                             <div class="title">Nov, 2014 - Current</div>
-                            <div class="desc">Aurora, CO</div>
+                            <div class="loc">Aurora, CO</div>
                         </div>
-                        <div class="clear">
-                            Transitioned from legacy order management system to a modern
-                            system using LAMP stack, Backbone.js and AWS. This allow us to
-                            use analytics from order to improve the business.
+                        <div class="clear desc">
+                            Rebuilt and redesigned legacy order management system using modern Javascript
+                            libraries (Backbone.js/Bootstrap) and LAMP stack (Linux, Apache, MySQL, PHP).
+                            Also integrated in accounting software, analytic software and inventory tracking
+                            hardware to provide a full suite capable of managing the whole business.
                         </div>
                     </div>
                     <div class="job">
@@ -237,9 +231,9 @@
                         </div>
                         <div class="right">
                             <div class="title">Sept, 2013 - Nov, 2014</div>
-                            <div class="desc">Broomfield, CO</div>
+                            <div class="loc">Broomfield, CO</div>
                         </div>
-                        <div class="clear">
+                        <div class="clear desc">
                             Developed and maintained frontend systems used by fortune 500
                             companies using Backbone.Js and Angular.Js for the front end
                             and PHP, Oracle, and CentOS on the back.
@@ -257,9 +251,9 @@
                         </div>
                         <div class="right">
                             <div class="title">Jun, 2012 - Aug, 2013</div>
-                            <div class="desc">Denver, CO</div>
+                            <div class="loc">Denver, CO</div>
                         </div>
-                        <div class="clear">
+                        <div class="clear desc">
                             Being a team lead of 3 developers, we designed, programmed
                             and maintained an order management system/workflow system
                             using Linux, Apache, MySQL and PHP.
@@ -320,12 +314,12 @@
                 <div class="section_description">
                     <div class="school">
                         <div class="left">
-                            <div class="title">Western Governors University</div>
-                            <div class="desc">B.S. Software Development</div>
+                            <div class="title">B.S. Software Development</div>
+                            <div class="loc">Western Governors University</div>
                         </div>
                         <div class="right">
                             <div class="title">December 2016</div>
-                            <div class="desc">Salt Lake City, UT</div>
+                            <div class="loc">Salt Lake City, UT</div>
                         </div>
                     </div>
                 </div>
