--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
         <meta charset="UTF-8">
         <title>Brandon Skrtich - Resumé</title>
 
-        <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
-        <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-        <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+        <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
         <link href="http://fonts.googleapis.com/css?family=Jura:400,500,600" rel="stylesheet" type="text/css">
         <link rel="icon" type="image/png" href="/bs-icon.png">
 
@@ -57,6 +57,7 @@
                 ul, img {
                     page-break-inside: avoid;
                 }
+
             }
 
             #section1 {
@@ -107,7 +108,6 @@
                 min-height: 100px;
                 width: 100%;
                 display: inline-block;
-                padding-bottom: 50px;
             }
 
             .section_title {
@@ -134,7 +134,10 @@
                 width: 100%;
                 min-height: 100px;
                 display: inline-block;
-                padding-bottom: 15px;
+            }
+
+            .job_padding {
+                height: 15px;
             }
 
             .job_company {
@@ -224,6 +227,7 @@
                             hardware to provide a full suite capable of managing the whole business.
                         </div>
                     </div>
+                    <div class="job_padding"></div>
                     <div class="job">
                         <div class="left">
                             <div class="job_company">Return Path</div>
@@ -244,6 +248,7 @@
                             -->
                         </div>
                     </div>
+                    <div class="job_padding"></div>
                     <div class="job">
                         <div class="left">
                             <div class="job_company">BieMedia</div>
