Fix double class on tag

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
     </head>
     <body>
         <!-- Load Font Awesome ASAP -->
-        <i class="preload-font" class="fa fa-square"></i>
+        <i class="fa fa-square preload-font"></i>
         <main>
             <section id="section1">
                 <div id="section1a">
