Add another job to the history

--- a/index.html
+++ b/index.html
@@ -97,6 +97,14 @@
                 }
             }
 
+            section {
+                padding-bottom: 10px;
+                clear: both;
+                min-height: 100px;
+                width: 100%;
+                display: inline-block;
+            }
+
             #section1 {
                 /*height: 250px;*/
             }
@@ -138,13 +146,6 @@
 
             .clear {
                 clear: both;
-            }
-
-            section {
-                clear: both;
-                min-height: 100px;
-                width: 100%;
-                display: inline-block;
             }
 
             .section_title {
@@ -331,13 +332,8 @@
                         </div>
                         <div class="clear desc">
                             Developed and maintained frontend systems used by fortune 500
-                            companies using Backbone.Js and Angular.Js for the front end
+                            companies using Backbone.js and Angular.js for the front end
                             and PHP, Oracle, and CentOS on the back.
-                            <!--
-                            Used the Agile/Kanban/Scrum process throughout the development
-                            process in order to keep production high and allow for quick
-                            turn around.
-                            -->
                         </div>
                     </div>
                     <div class="job_padding"></div>
@@ -351,12 +347,12 @@
                             <div class="loc">Denver, CO</div>
                         </div>
                         <div class="clear desc">
-                            Being a team lead of 3 developers, we designed, programmed
-                            and maintained an order management system/workflow system
-                            using Linux, Apache, MySQL and PHP.
+                            Led a team of 3 developers. Designed, programmed and maintained
+                            an order management system/workflow system using Linux, Apache,
+                            MySQL and PHP.
                         </div>
                     </div>
-                    <!--
+                    <div class="job_padding"></div>
                     <div class="job">
                         <div class="left">
                             <div class="job_company">Retriever Software</div>
@@ -367,14 +363,10 @@
                             <div class="desc">Englewood, CO</div>
                         </div>
                         <div class="clear">
-                            Solo Designed, Programmed, Maintained a web portal for
-                            customer interaction and management using a custom built
-                            frame work. Solo Designed, Programmed, Maintained a Client/Server
-                            system using Xojo, PHP, Apache, XML, PostgreSQL installed on 4000+
-                            systems.
+                            Designed, programmed, and maintained a client/server applications along with a web portal for
+                            customer interaction and management using Javascript, PHP and PostgreSQL.
                         </div>
                     </div>
-                    -->
                 </div>
             </section>
             <section id="section3">
